--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 .login-container {
     width: 300px;
     padding: 45px;
-    background-color: white;
+    background-color: rgba(255, 255, 255,0.6);
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
