--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f0f0f0;
+    background-image: linear-gradient(rgb(255, 122, 122),rgb(130, 130, 247));
 }
 
 .login-container {
